@@ -7,7 +7,28 @@
 #' depending on the class it belongs to, see \code{wcw.weight}.
 #' This might help to mitigate problems caused by imbalanced class distributions.
 #'
+#' This weighted fitting can be achieved in two ways:
+#'
+#' a) The learner already has a parameter for class weighting, so one weight can directly be defined
+#' per class. Example: \dQuote{classif.ksvm} and parameter \code{class.weights}.
+#' In this case we don't really do anything fancy. We convert \code{wcw.weight} a bit,
+#' but basically simply bind its value to the class weighting param.
+#' The wrapper in this case simply offers a convenient, consistent fashion for class weighting -
+#' and tuning! See example below.
+#'
+#' b) The learner does not have a direct parameter to support class weighting, but
+#' supports observation weights, so \code{hasProperties(learner, 'weights')} is \code{TRUE}.
+#' This means that an individual, arbitrary weight can be set per observation during training.
+#' We set this weight depending on the class internally in the wrapper. Basically we introduce
+#' something like a new \dQuote{class.weights} parameter for the learner via observation weights.
+#'
 #' @template arg_learner_classif
+#' @param wcw.param [\code{character(1)}]\cr
+#'   Name of already existing learner param which allows class weighting.
+#'   Or \code{NULL} if such a param does not exist.
+#'   Must during training accept a named vector of class weights,
+#'   where length equals the number of classes.
+#'   Default is \code{NULL}.
 #' @param wcw.weight [\code{numeric}]\cr
 #'   Weight for each class.
 #'   Must be a vector of the same number of elements as classes are in task,
@@ -18,8 +39,38 @@
 #'   of 1.
 #' @template ret_learner
 #' @export
-makeWeightedClassesWrapper = function(learner, wcw.weight) {
-  learner = checkLearnerClassif(learner, weights = TRUE)
+#' @examples
+#' # using the direct parameter of the SVM
+#' lrn = makeWeightedClassesWrapper("classif.ksvm", wcw.param = "class.weights", wcw.weight = 0.01)
+#' res = holdout(lrn, sonar.task)
+#' print(getConfMatrix(res$pred))
+#'
+#' # using the observation weights of logreg
+#' lrn = makeWeightedClassesWrapper("classif.logreg", wcw.weight = 0.01)
+#' res = holdout(lrn, sonar.task)
+#' print(getConfMatrix(res$pred))
+#'
+#' # tuning the imbalancy param and the SVM param in one go
+#' lrn = makeWeightedClassesWrapper("classif.ksvm", wcw.param = "class.weights")
+#' ps = makeParamSet(
+#'   makeNumericParam("wcw.weight", lower = 1, upper = 10),
+#'   makeNumericParam("C", lower = -12, upper = 12, trafo = function(x) 2^x),
+#'   makeNumericParam("sigma", lower = -12, upper = 12, trafo = function(x) 2^x)
+#' )
+#' ctrl = makeTuneControlRandom(maxit = 3L)
+#' rdesc = makeResampleDesc("CV", iters = 2L, stratify = TRUE)
+#' res = tuneParams(lrn, sonar.task, rdesc, par.set = ps, control = ctrl)
+#' print(res)
+#' print(res$opt.path)
+makeWeightedClassesWrapper = function(learner, wcw.param = NULL, wcw.weight = 1) {
+  learner = checkLearnerClassif(learner)
+  if (is.null(wcw.param)) {
+    if (!hasProperties(learner, "weights"))
+      stopf("Learner '%s' does not support observation weights. You have to set 'wcw.param' to the learner param which allows to set class weights! (which hopefully exists...)", learner$id)
+  } else {
+    assertSubset(wcw.param, getParamIds(learner$par.set))
+  }
+
   id = paste("weightedclasses", learner$id, sep = ".")
   ps = makeParamSet(
     makeNumericVectorLearnerParam(id = "wcw.weight", len = NA_integer_, lower = 0)
@@ -27,6 +78,7 @@ makeWeightedClassesWrapper = function(learner, wcw.weight) {
   pv = list(wcw.weight = wcw.weight)
   x = makeBaseWrapper(id, learner, package = learner$package, par.set = ps, par.vals = pv,
     cl = "WeightedClassesWrapper")
+  x$wcw.param = wcw.param
   removeProperties(x, "weights")
 }
 
@@ -35,6 +87,7 @@ trainLearner.WeightedClassesWrapper = function(.learner, .task, .subset, .weight
   .task = subsetTask(.task, .subset)
   td = .task$task.desc
   levs = td$class.levels
+  p = .learner$wcw.param
   if (length(levs) == 2L) {
     assertNumber(wcw.weight, lower = 0)
     wcw.weight = c(wcw.weight, 1)
@@ -43,9 +96,14 @@ trainLearner.WeightedClassesWrapper = function(.learner, .task, .subset, .weight
     assertNumeric(wcw.weight, len = length(levs), lower = 0)
     names(wcw.weight) = levs
   }
-  y = as.character(getTaskTargets(.task))
-  weights = wcw.weight[y]
-  m = train(.learner$next.learner, task = .task, weights = weights)
+  if (is.null(p)) {
+    y = as.character(getTaskTargets(.task))
+    weights = wcw.weight[y]
+    m = train(.learner$next.learner, task = .task, weights = weights)
+  } else {
+    .learner = setHyperPars(.learner, par.vals = setNames(list(wcw.weight), p))
+    m = train(.learner$next.learner, task = .task)
+  }
   makeChainModel(next.model = m, cl = "WeightedClassesModel")
 }
 
