@@ -1,5 +1,6 @@
-mlr_2.0:
+mlr_2.1:
 - fix a bug when feature filtering resulted in a NoFeatureModel 
+- improve makeWeightedClassesWrapper: Hyperparams for class weighting are now supported, too.
 
 mlr_2.0:
 - mlr now supports survival analysis models (experimental)
